// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Trackey's identifyUser destination action: all fields 1`] = `
Object {
  "messageId": "C(l]qexukkH*z",
  "timestamp": "C(l]qexukkH*z",
  "traits": Object {
    "testType": "C(l]qexukkH*z",
  },
  "userId": "C(l]qexukkH*z",
}
`;

exports[`Testing snapshot for Trackey's identifyUser destination action: required fields 1`] = `
Object {
  "timestamp": "C(l]qexukkH*z",
  "userId": "C(l]qexukkH*z",
}
`;
